# flecsi-sp

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.gitlab-ci/config/: mirrors.yaml
.gitlab-ci/scripts/: .before-script.yml  .global-variables.yml  .templates.yml  build-n-test-jobs.yml  env-jobs.yml  trigger-jobs.yml
.gitlab-ci/scripts/schedules/: build-n-test-jobs.yml
app/: CMakeLists.txt  app.cc
apps/: CMakeLists.txt
apps/make_mesh/: .main.cc.swp  CMakeLists.txt  decomp.h  main.cc
cmake/: FindPORTAGE.cmake
config/: FleCSI-SPConfig.cmake.in  documentation.cmake  flecsi-sp-config.h.in  flecsi-sp.h.in  packages.cmake  project.cmake
data/catalyst_scripts/: catalyst-scripts.json  simOutagewww_0000.pvtu  view_test.py  write_vtm.py
data/catalyst_scripts/simOutagewww_0000/: simOutagewww_0000_0.vtu  simOutagewww_0000_1.vtu
data/meshes/2d/: larsen-thin.g
doc/: dgconfig.py  doxygen.conf.in  header.tex.in  ugconfig.py
docker/: Dockerfile  fedora
examples/00_hello_world/: hello_world.h
examples/02_tasks_and_functions/: tasks_and_functions.h
examples/XX_gauss_jacobi/: gauss-jacobi.h
examples/XX_simple_function/: .function.h.swp  function.h
examples/XX_subset/: config.h  subset.h
examples/common/: init_mesh.h
examples/sandbox/: .state.h.swp  config.h  driver.h  state.h
examples/sparse_data/: config.h  mmstate.h
flecsi-sp/burton/: CMakeLists.txt  burton.h  burton_config.h  burton_corner.h  burton_element.cc  burton_element.h  burton_extras.h  burton_hexahedron.cc  burton_io_exodus.h  burton_io_tecplot.h  burton_io_vtu.h  burton_mesh.h  burton_mesh_topology.h  burton_polygon.cc  burton_polygon.h  burton_polyhedron.h  burton_quadrilateral.cc  burton_quadrilateral.h  burton_specialization_arguments.h  burton_specialization_default_driver.cc  burton_specialization_init.cc  burton_specialization_init.h  burton_tetrahedron.h  burton_triangle.cc  burton_triangle.h  burton_types.cc  burton_types.h  burton_vertex.cc  burton_vertex.h  burton_wedge.cc  burton_wedge.h  factory.h  flecsi_mesh_wrapper.h  flecsi_state_wrapper.h  mesh_interface.h  mesh_utils.h  portage_helpers.h  portage_mesh_wrapper.h  portage_mm_state_wrapper.h  portage_state_wrapper.h  (+1 more)
flecsi-sp/burton/test/: burton.cc  burton_1d_connectivity_rank0.out.std  burton_1d_connectivity_rank1.out.std  burton_1d_dump_rank0.out.std  burton_1d_dump_rank1.out.std  burton_1d_geometry_rank0.out.std  burton_1d_geometry_rank1.out.std  burton_2d.cc  burton_2d_connectivity_rank0.out.std  burton_2d_connectivity_rank1.out.std  burton_2d_dump_rank0.out.std  burton_2d_dump_rank1.out.std  burton_2d_geometry_rank0.out.std  burton_2d_geometry_rank1.out.std  burton_2d_test.h  burton_3d_connectivity_rank0.out.std  burton_3d_connectivity_rank1.out.std  burton_3d_dump_rank0.out.std  burton_3d_dump_rank1.out.std  burton_3d_geometry_rank0.out.std  burton_3d_geometry_rank1.out.std  burton_catalyst_validate.cc  burton_extras_1d_connectivity_rank0.out.std  burton_extras_1d_connectivity_rank1.out.std  burton_extras_1d_dump_rank0.out.std  burton_extras_1d_dump_rank1.out.std  burton_extras_1d_geometry_rank0.out.std  burton_extras_1d_geometry_rank1.out.std  burton_extras_2d_connectivity_rank0.out.std  burton_extras_2d_connectivity_rank1.out.std  burton_extras_2d_dump_rank0.out.std  burton_extras_2d_dump_rank1.out.std  burton_extras_2d_geometry_rank0.out.std  burton_extras_2d_geometry_rank1.out.std  burton_extras_3d_connectivity_rank0.out.std  burton_extras_3d_connectivity_rank1.out.std  burton_extras_3d_dump_rank0.out.std  burton_extras_3d_dump_rank1.out.std  burton_extras_3d_geometry_rank0.out.std  burton_extras_3d_geometry_rank1.out.std  (+8 more)
flecsi-sp/io/: CMakeLists.txt  detail.h  ex_get_conn.c  ex_get_coord.c  ex_get_set.c  ex_get_side_set_elem_list.c  exodus_definition.h  hdf5_definition.h  io_exodus.h  io_utils.h  mpas_definition.h  x3d_definition.h
flecsi-sp/io/test/: color_exodus.cc  exodus_definition.cc  mpas_definition.cc  x3d_definition.cc
flecsi-sp/minimal/: CMakeLists.txt  config.h  entity_types.h  mesh.h  types.h
flecsi-sp/minimal/test/: minimal.cc
flecsi-sp/utils/: CMakeLists.txt  char_array.h  common.cc  common.h  parse_arguments.h  types.h
spack-repo/: repo.yaml
specializations/burton/: CMakeLists.txt  burton.h  burton_config.h  burton_corner.h  burton_element.cc  burton_element.h  burton_hexahedron.cc  burton_hexahedron.h  burton_io_exodus.h  burton_io_tecplot.h  burton_io_vtk.h  burton_io_vtm.h  burton_io_vtu.h  burton_mesh.h  burton_mesh_topology.h  burton_polygon.cc  burton_polygon.h  burton_polyhedron.cc  burton_polyhedron.h  burton_quadrilateral.cc  burton_quadrilateral.h  burton_tetrahedron.cc  burton_tetrahedron.h  burton_triangle.cc  burton_triangle.h  burton_types.h  burton_vertex.cc  burton_vertex.h  burton_wedge.cc  burton_wedge.h  factory.h  mesh_utils.h  voronoi.h  vtk_utils.h
specializations/burton/geom/: point.h
specializations/burton/io/: vtk.h
specializations/burton/math/: array.h  constants.h  general.h  matrix.h  multi_array.h  vector.h
specializations/burton/test/: burton_2d_test.h  burton_3d_test.h  burton_create_test.h  burton_test_base.h
specializations/burton/utils/: template_helpers.h
specializations/common/: CMakeLists.txt  types.h
specializations/geometry/: point.h  space_vector.h
specializations/geometry/shapes/: hexahedron.h  polygon.h  polyhedron.h  quadrilateral.h  tetrahedron.h  triangle.h
specializations/geometry/test/: point.cc  space_vector.cc
specializations/io/: vtk.cc  vtk.h
specializations/math/: array.h  constants.h  general.h  matrix.h  multi_array.h  vector.h
specializations/minimal/: CMakeLists.txt  config.h  entity_types.h  mesh.h  minimal.md  minimal_config.h  minimal_entity_types.h  minimal_mesh.h  minimal_mesh_properties.h  minimal_types.h  types.h
specializations/minimal/test/: minimal.cc  properties.cc
specializations/utils/: errors.h  fixed_vector.h  template_helpers.h  tuple_visit.h  type_traits.h
src/example/: CMakeLists.txt  utils.cc  utils.h  utils.md
tools/: driver_initialization.cc
(+8 files in other folders)
